--- a/.env.prod
+++ b/.env.prod
@@ -1,7 +1,17 @@
+# 運行埠
+SERVER_PORT = 3000
+
+# JWT
+JWT_SECRET = "jwt-secret"
+
 # 資料庫相關
 DB_TYPE = 'mysql'
 DB_HOST = '127.0.0.1'
 DB_PORT = 3306
-DB_USERNAME = 'root'
-DB_PASSWORD = '123456'
 DB_NAME = 'nest_test'
+DB_USERNAME = 'you_username'
+DB_PASSWORD = 'you_password'
+DB_POOL_SIZE = 10
+DB_AUTO_LOAD_ENTITIES = true
+DB_CONNECTOR_PACKAGE = 'mysql2'
+DB_SYNCHRONIZE = true # 同步資料庫，生產環境建議關閉，否則可能遺失數據！
