--- a/.env.prod
+++ b/.env.prod
@@ -2,7 +2,9 @@
 SERVER_PORT = 3000
 
 # JWT
-JWT_SECRET = "jwt-secret"
+JWT_SECRET = 'jwt-secret'
+JWT_ACCESS_TOKEN_EXPIRES_IN =  60 * 60 * 24 * 1 # Access Token 過期時間，單位為秒
+JWT_REFRESH_TOKEN_EXPIRES_IN = 60 * 60 * 24 * 14 # Refresh Token 過期時間，單位為秒
 
 # 資料庫相關
 DB_TYPE = 'mysql'
