feat: 新增跨來源資源共用設定
- 在 .env 加入 CORS 相關環境變數
- 在 main.ts 加入 CORS 設定

--- a/.env.dev
+++ b/.env.dev
@@ -1,6 +1,10 @@
 # 運行埠
 SERVER_PORT = 3000
 
+# 跨域
+CORS_ORIGIN = '*' # 生產環境不應該使用星號，請設定具體的域名
+CORS_CREDENTIALS = true # 是否允許攜帶cookie
+
 # JWT
 JWT_SECRET = 'jwt-secret'
 JWT_ACCESS_TOKEN_EXPIRES_IN =  60 * 60 * 24 * 1 # Access Token 過期時間，單位為秒
