--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "cross-env": "^7.0.3",
     "eslint": "^8.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-prettier": "^5.2.1",
     "jest": "^29.5.0",
     "prettier": "^3.0.0",
