--- a/.env.prod
+++ b/.env.prod
@@ -4,6 +4,10 @@ SERVER_PORT = 3000
 # 限制前端請求中每個欄位值的最大字元長度
 MAX_FIELD_LENGTH = 255
 
+# 限制前端請求中分頁的大小
+MAX_PAGE_SIZE = 200
+MAX_PAGE_NUMBER = 99999999
+
 # 跨域
 CORS_ORIGIN = '*' # 生產環境不應該使用星號，請設定具體的域名
 CORS_CREDENTIALS = true # 是否允許攜帶cookie
