--- a/package.json
+++ b/package.json
@@ -30,8 +30,10 @@
     "@nestjs/typeorm": "^10.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
+    "dotenv": "^16.5.0",
     "md5": "^2.3.0",
     "mysql2": "^3.12.0",
+    "openai": "^4.98.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
     "swagger-ui-express": "^5.0.1",
