feat：新增 AI 語言轉換功能及更新環境變數
- 在 .env 檔案中更新資料庫連線資訊，並新增 OPENAI_API_KEY
- 新增 ai.service.ts，實作與 GPT-4o-nano 模型互動的功能
- 在 MultilingualFieldsController 中新增 convertLanguage API 端點，支援字串轉換為其他語言
- 在 MultilingualFieldsService 中實作 convertLanguage 方法，整合 AI 語言轉換邏輯
- 更新相關 DTO，新增 ConvertLanguageReqDto 以支援語言轉換請求

--- a/.env.dev
+++ b/.env.dev
@@ -28,3 +28,6 @@ DB_POOL_SIZE = 10
 DB_AUTO_LOAD_ENTITIES = true
 DB_CONNECTOR_PACKAGE = 'mysql2'
 DB_SYNCHRONIZE = true # 同步資料庫，生產環境建議關閉，否則可能遺失數據！
+
+# AI 相關
+OPENAI_API_KEY = 'sk-proj-xxxxxx'
