--- a/.env.prod
+++ b/.env.prod
@@ -27,4 +27,7 @@ DB_PASSWORD = 'you_password'
 DB_POOL_SIZE = 10
 DB_AUTO_LOAD_ENTITIES = true
 DB_CONNECTOR_PACKAGE = 'mysql2'
-DB_SYNCHRONIZE = true # 同步資料庫，生產環境建議關閉，否則可能遺失數據！
+DB_SYNCHRONIZE = false # 同步資料庫，生產環境建議關閉，否則可能遺失數據！
+
+# AI 相關
+OPENAI_API_KEY = 'sk-proj-xxxxxx'
