feat: 更新環境變數及 AI 服務整合
- 修改 .env 檔案
- 移除舊的 AI 服務實作，新增 chat.ts 以整合 chatGPT 和 deepSeek 模型
- 更新 multilingual-fields.service.ts，使用新的 chat 函式進行翻譯請求
- 更新 package.json，升級 openai 套件版本

--- a/.env.prod
+++ b/.env.prod
@@ -30,4 +30,5 @@ DB_CONNECTOR_PACKAGE = 'mysql2'
 DB_SYNCHRONIZE = false # 同步資料庫，生產環境建議關閉，否則可能遺失數據！
 
 # AI 相關
-OPENAI_API_KEY = 'sk-proj-xxxxxx'
+CHAT_GPT_API_KEY = 'sk-proj-xxxxxx'
+DEEP_SEEK_API_KEY = 'sk-xxxxxxxxxxxx'
