--- a/.env.test
+++ b/.env.test
@@ -30,4 +30,5 @@ DB_CONNECTOR_PACKAGE = 'mysql2'
 DB_SYNCHRONIZE = false # 同步資料庫，生產環境建議關閉，否則可能遺失數據！
 
 # AI 相關
-OPENAI_API_KEY = 'sk-proj-xxxxxx'
+CHAT_GPT_API_KEY = 'sk-proj-xxxxxx'
+DEEP_SEEK_API_KEY = 'sk-xxxxxxxxxxxx'
