--- a/.env.prod
+++ b/.env.prod
@@ -29,6 +29,11 @@ DB_AUTO_LOAD_ENTITIES = true
 DB_CONNECTOR_PACKAGE = 'mysql2'
 DB_SYNCHRONIZE = false # 同步資料庫，生產環境建議關閉，否則可能遺失數據！
 
+# 資料庫常量
+DB_CONSTANT_SUPER_ADMIN_ROLE_ID = '1' # 「超級管理員」的角色ID
+DB_CONSTANT_COMMON_ROLE_ID = '11' # 「一般使用者」的角色ID
+DB_CONSTANT_DEFAULT_SUPER_ADMIN_USER_ID = '1' # 「系統預設的超級管理員」的使用者ID
+
 # AI 相關
 CHAT_GPT_API_KEY = 'sk-proj-xxxxxx'
 DEEP_SEEK_API_KEY = 'sk-xxxxxxxxxxxx'
