--- a/.env.test
+++ b/.env.test
@@ -38,3 +38,6 @@ DB_CONSTANT_SWAGGER_DEDICATED_USER_ID = '19' # swagger 專用帳號的使用者I
 # AI 相關
 CHAT_GPT_API_KEY = 'sk-proj-xxxxxx'
 DEEP_SEEK_API_KEY = 'sk-xxxxxxxxxxxx'
+
+# 文件儲存路徑(絕對路徑)
+File_STORAGE_PATH = 'C:\Users\Hello\Downloads\file'
