--- a/package.json
+++ b/package.json
@@ -26,13 +26,15 @@
     "@nestjs/core": "^10.0.0",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.6",
-    "@nestjs/platform-express": "^10.0.0",
+    "@nestjs/platform-express": "^10.4.15",
     "@nestjs/swagger": "^11.0.2",
     "@nestjs/typeorm": "^10.0.2",
+    "@types/multer": "^2.0.0",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "dotenv": "^16.5.0",
     "md5": "^2.3.0",
+    "multer": "^2.0.2",
     "mysql2": "^3.12.0",
     "openai": "^5.12.2",
     "reflect-metadata": "^0.2.0",
