--- a/.env.dev
+++ b/.env.dev
@@ -29,6 +29,13 @@ DB_AUTO_LOAD_ENTITIES = true
 DB_CONNECTOR_PACKAGE = 'mysql2'
 DB_SYNCHRONIZE = true # 同步資料庫，生產環境建議關閉，否則可能遺失數據！
 
+# 檔案儲存路徑(絕對路徑)
+FILE_STORAGE_PATH = 'C:\Users\Hello\Downloads\file'
+# 檔案服務根地址
+FILE_SERVE_BASE_URL = 'http://127.0.0.1:3000'
+# 檔案服務路徑
+FILE_SERVE_ACCESS_PATH = '/file'
+
 # 資料庫常量
 DB_CONSTANT_SUPER_ADMIN_ROLE_ID = '1' # 「超級管理員」的角色ID
 DB_CONSTANT_COMMON_ROLE_ID = '11' # 「一般使用者」的角色ID
@@ -38,6 +45,3 @@ DB_CONSTANT_SWAGGER_DEDICATED_USER_ID = '19' # swagger 專用帳號的使用者I
 # AI 相關
 CHAT_GPT_API_KEY = 'sk-proj-xxxxxx'
 DEEP_SEEK_API_KEY = 'sk-xxxxxxxxxxxx'
-
-# 文件儲存路徑(絕對路徑)
-File_STORAGE_PATH = 'C:\Users\Hello\Downloads\file'
