chore: 更新環境變數及啟動日誌
- 新增 Swagger API 文件路徑配置
- 增加應用啟動日誌

--- a/.env.dev
+++ b/.env.dev
@@ -45,6 +45,8 @@ FILE_SERVE_BASE_URL = 'http://127.0.0.1:3000'
 # 檔案服務路徑
 FILE_SERVE_ACCESS_PATH = '/file'
 
+# swagger API文檔的路徑(開頭不需要斜杆「/」)
+SWAGGER_API_DOCS_PATH = 'api-docs'
 
 # AI 相關
 CHAT_GPT_API_KEY = 'sk-proj-xxxxxx'
