--- a/.env.prod
+++ b/.env.prod
@@ -28,6 +28,9 @@ DB_POOL_SIZE = 10
 DB_CONNECTOR_PACKAGE = 'mysql2'
 DB_SYNCHRONIZE = false # 同步資料庫，生產環境建議關閉，否則可能遺失數據！
 
+# 驗證碼過期時間（毫秒）
+VERIFICATION_CODE_EXPIRE_MS = 15 * 60 * 1000
+
 # 資料庫常量
 DB_CONSTANT_SUPER_ADMIN_ROLE_ID = '1' # 「超級管理員」的角色ID
 DB_CONSTANT_COMMON_ROLE_ID = '11' # 「一般使用者」的角色ID
