chore: 更新環境變數配置

--- a/.env.dev
+++ b/.env.dev
@@ -28,8 +28,10 @@ DB_POOL_SIZE = 10
 DB_CONNECTOR_PACKAGE = 'mysql2'
 DB_SYNCHRONIZE = true # 同步資料庫，生產環境建議關閉，否則可能遺失數據！
 
-# 驗證碼過期時間（毫秒）
-VERIFICATION_CODE_EXPIRE_MS = 15 * 60 * 1000
+# 驗證碼過期時間（單位為秒）
+VERIFICATION_CODE_EXPIRE_SECONDS = 15 * 60
+# token-blacklist 資料保留的時間（單位為秒）
+TOKEN_BLACKLIST_RETENTION_SECONDS = 60 * 60 * 24 * 7
 
 # 資料庫常量
 DB_CONSTANT_SUPER_ADMIN_ROLE_ID = '1' # 「超級管理員」的角色ID
