chore: 更新環境變數配置
- 將開發環境的 DB_NAME 修改為 'uk2_admin_dev'
- 將生產環境的 DB_NAME 修改為 'uk2_admin_prod'
- 將測試環境的 DB_NAME 修改為 'uk2_admin_test'

--- a/.env.prod
+++ b/.env.prod
@@ -21,7 +21,7 @@ JWT_REFRESH_TOKEN_EXPIRES_IN = 60 * 60 * 24 * 14 # Refresh Token 過期時間，
 DB_TYPE = 'mysql'
 DB_HOST = '127.0.0.1'
 DB_PORT = 3306
-DB_NAME = 'nest_test'
+DB_NAME = 'uk2_admin_prod'
 DB_USERNAME = 'you_username'
 DB_PASSWORD = 'you_password'
 DB_POOL_SIZE = 10
