feat: 新增圖形驗證碼功能及相關配置
- 在環境變數中新增 IS_LOGIN_CAPTCHA_ENABLED 配置以啟用圖形驗證碼
- 更新 AuthController，新增獲取圖形驗證碼的端點
- 更新 AuthService，實現圖形驗證碼的生成與驗證邏輯
- 更新相關 DTO 以支持圖形驗證碼的傳遞
- 在 VerifyCodeService 中新增圖形驗證碼的生成與刪除功能

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "openai": "^5.12.2",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "svg-captcha": "^1.4.0",
     "swagger-ui-express": "^5.0.1",
     "typeorm": "^0.3.20",
     "uuid": "^11.0.3"
