--- a/.env.dev
+++ b/.env.dev
@@ -12,6 +12,9 @@ MAX_PAGE_NUMBER = 99999999
 CORS_ORIGIN = '*' # 生產環境不應該使用星號，請設定具體的域名
 CORS_CREDENTIALS = true # 是否允許攜帶cookie
 
+# 是否开启登录时的图形验证码
+IS_LOGIN_CAPTCHA_ENABLED = true
+
 # JWT
 JWT_SECRET = 'jwt-secret'
 JWT_ACCESS_TOKEN_EXPIRES_IN =  60 * 60 * 24 * 1 # Access Token 過期時間，單位為秒
